--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
   "dependencies": {
     "react": "^0.14.8",
     "react-native": "^0.24.1",
+    "react-native-scrollable-tab-view": "^0.4.1",
+    "react-native-vector-icons": "^1.3.4",
     "react-redux": "^4.4.5",
     "redux": "^3.5.2",
     "redux-thunk": "^2.0.1"
+  },
+  "devDependencies": {
+    "remote-redux-devtools": "^0.3.1"
   }
 }
